Changed datatypes for onetimepickup and suspendpickupdates back to string because of null is preventing me from logging in

--- a/TrashCollector_Proj.csproj
+++ b/TrashCollector_Proj.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <Compile Remove="Data\Migrations\20200527162236_CorrectDataTypeForPickupsAndSuspend.cs" />
     <Compile Remove="Data\Migrations\20200527162236_CorrectDataTypeForPickupsAndSuspend.Designer.cs" />
+    <Compile Remove="Data\Migrations\20200527163334_UpdatePropetiesDataType.cs" />
+    <Compile Remove="Data\Migrations\20200527163334_UpdatePropetiesDataType.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
